Fix text overflow issues (thanks @uki !)

--- a/docs/css/common.css
+++ b/docs/css/common.css
@@ -50,6 +50,8 @@ main {
 
 main article {
     flex-grow: 10;
+    /* Somehow this fixes horizontal overflow issues. Thanks @uki ! */
+    min-width: 0;
 }
 
 
